Más código y texto en Modulos_para_grib

--- a/Modulos_para_grib.ipynb
+++ b/Modulos_para_grib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46e00a6a",
+   "id": "2a9e29bc",
    "metadata": {},
    "source": [
     "# Módulos útiles para ficheros grib"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22c93ad5",
+   "id": "7e414f0c",
    "metadata": {},
    "source": [
     "Para abrir el notebook en Colab pulsa el botón:"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ba727b",
+   "id": "24f66cff",
    "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/jlcasador/curso_formatos_meteo/blob/main/Modulos_para_grib.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a17f77",
+   "id": "affda2d7",
    "metadata": {},
    "source": [
     "[GRIB](https://confluence.ecmwf.int/display/CKB/What+are+GRIB+files+and+how+can+I+read+them) es un acrónimo cuyas siglas corresponden a \"General Regularly distributed Information in Binary form\".  \n",
-    "Es un formato estándar de la Organización Meteorológica Mundial (OMM) para archivar e intercambiar datos meteorológicos."
+    "Es un [formato estándar de la Organización Meteorológica Mundial (OMM)](https://library.wmo.int/index.php?lvl=notice_display&id=10684) para archivar e intercambiar datos meteorológicos."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e572daea",
+   "id": "1e8e053e",
    "metadata": {},
    "source": [
     "Esta foto puede representar la jerarquía de paquetes que vamos a usar en este curso:"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e968427",
+   "id": "cd70f499",
    "metadata": {},
    "source": [
     "![jerarquía de módulos](matroshka_grib_60.jpg)"
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6d4a557",
+   "id": "18d8b391",
    "metadata": {},
    "source": [
     "### Instalación"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a516a5",
+   "id": "b4eb0384",
    "metadata": {},
    "source": [
     "#### Instalación de eccodes utilizando CMake"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb81bd2",
+   "id": "098eb594",
    "metadata": {},
    "source": [
     "Para instalar eccodes podemos seguir las [instrucciones de instalación de la web del ECMWF](https://confluence.ecmwf.int/display/ECC/ecCodes+installation), como sigue: "
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2226e674",
+   "id": "d6c92d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b31d2c",
+   "id": "da2fba83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee85521f",
+   "id": "b8403ec5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e936841",
+   "id": "3d92f305",
    "metadata": {},
    "source": [
     "#### Instalación de eccodes con Conda"
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4316dba7",
+   "id": "a3da4e07",
    "metadata": {},
    "source": [
     "Otra alternativa es instalar conda, y después instalar eccodes desde conda:"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3ada20",
+   "id": "8760b975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bf77fd0",
+   "id": "6b33fd2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e9aac75",
+   "id": "c753b678",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,37 +163,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31564a71",
+   "id": "01fc892e",
    "metadata": {},
    "source": [
     "#### Instalación de otros paquetes"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a19c3124",
+   "metadata": {},
+   "source": [
+    "(Notar que xarray está instalado por defecto en este entorno)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69b324d",
+   "id": "434c2336",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Notar que xarray está instalado por defecto en este entorno\n",
     "!conda install -c conda-forge cfgrib"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8cc2f52",
+   "id": "306a1b9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install metview-batch -c conda-forge"
+    "!conda install metview-batch -c conda-forge\n",
+    "#!conda install metview -c conda-forge # si se quiere instalar metview completo (con GUI)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eab9b9e",
+   "id": "566a6dc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60a8f35f",
+   "id": "425a633f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +221,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0163d33d",
+   "id": "9cc3fed1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install climetlab"
+    "!pip install climetlab"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d43108e5",
+   "id": "0b8a9b8d",
    "metadata": {},
    "source": [
     "#### Ficheros de ejemplo"
@@ -231,17 +239,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a53a11",
+   "id": "13b87148",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://owncloud.aemet.es/index.php/s/tpl9SuZ16HeByJA/download -O ecmwf_surface.grib\n",
-    "!wget https://owncloud.aemet.es/index.php/s/XsRZh7OezHwcARx/download -O air_quality.grb2"
+    "!test -f ecmwf_surface.grib | wget https://owncloud.aemet.es/index.php/s/tpl9SuZ16HeByJA/download -O ecmwf_surface.grib\n",
+    "!test -f air_quality.grb2 | wget https://owncloud.aemet.es/index.php/s/XsRZh7OezHwcARx/download -O air_quality.grb2"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd2ea87f",
+   "id": "6378c38c",
    "metadata": {},
    "source": [
     "### Estructura de un fichero grib. Grib_tools"
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f147020",
+   "id": "b80f6146",
    "metadata": {},
    "source": [
     "- Unas palabras sobre gribs\n",
@@ -259,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "746ae803",
+   "id": "747e3b80",
    "metadata": {},
    "source": [
     "https://library.wmo.int/index.php?lvl=notice_display&id=10684"
@@ -267,10 +275,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f8d2e7b",
+   "id": "5dacc367",
    "metadata": {},
    "source": [
-    "Las [grib keys](https://confluence.ecmwf.int/display/ECC/GRIB+Keys) son metadatos de cada mensaje grib. Nos informan sobre características tales como.\n",
+    "Las [grib keys](https://confluence.ecmwf.int/display/ECC/GRIB+Keys) son metadatos de cada mensaje grib. Nos informan sobre características tales como.  \n",
     "Algunas keys importantes son:\n",
     "- centre: centro de origen del grib (notar que cada centro tendrá su tabla de definiciones)\n",
     "- edition: indica si el fichero grib es de tipo 1 o 2\n",
@@ -278,6 +286,7 @@
     "- table2Version: tabla de parámetros a la que pertenece el parámetro\n",
     "- indicatorOfParameter: parámetro (para grib1)\n",
     "- level: nivel\n",
+    "- typeOfLevel: tipo de nivel (superficie, nivel de presión ...)\n",
     "- paramId: key computada que el ECMWF utiliza para facilitar la identificación del parámetro \n",
     "- dataDate: fecha de ejecución del modelo\n",
     "- dataTime: hora de ejecución del modelo (\"pasada\")\n",
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac02a28",
+   "id": "bddf55c7",
    "metadata": {},
    "source": [
     "Las [grib tools](https://confluence.ecmwf.int/display/ECC/GRIB+tools) son un conjunto de comandos que permiten "
@@ -306,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96eb0c89",
+   "id": "126174f5",
    "metadata": {},
    "source": [
     "grib_ls muestra el contenido de algunas keys de un fichero grib. Da una línea por cada mensaje grib:"
@@ -315,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8141de",
+   "id": "072c38d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "463c40ff",
+   "id": "dda490c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da169ea4",
+   "id": "5f18644d",
    "metadata": {},
    "source": [
     "grib_dump nos da el valor de todas las keys codificadas del grib:"
@@ -344,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64fb010a",
+   "id": "16f76096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a84206ef",
+   "id": "19a641cd",
    "metadata": {},
    "source": [
     "Para aclarar qué código corresponden a cada parámetro podemos consultar las [tablas de parámetros](https://codes.ecmwf.int/grib/param-db/). Estas tablas son válidas para gribs procedentes del ECMWF."
@@ -361,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bd9247",
+   "id": "f1c52ddc",
    "metadata": {},
    "source": [
     "### Módulo eccodes"
@@ -369,16 +378,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "434ff8a7",
+   "id": "12e0ab8c",
    "metadata": {},
    "source": [
-    "https://sites.ecmwf.int/docs/eccodes/namespaceec_codes.html"
+    "https://confluence.ecmwf.int/display/ECC/ecCodes+Home"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf7da5d8",
+   "id": "4d47b39f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7df45b94",
+   "id": "9e5f2ec4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,17 +407,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb64638",
+   "id": "f9b8960f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gid = ec.codes_new_from_file(f, CODES_PRODUCT_GRIB)"
+    "gid = ec.codes_new_from_file(f, ec.CODES_PRODUCT_GRIB)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd2b641",
+   "id": "ee13e511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c537f3",
+   "id": "000817ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed05e7b",
+   "id": "8df60330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +446,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dabfd52",
+   "id": "9daa84c1",
+   "metadata": {},
+   "source": [
+    "Hay una [documentación en línea](https://sites.ecmwf.int/docs/eccodes/namespaceec_codes.html) sobre las distintas funciones de eccodes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1195875f",
    "metadata": {},
    "source": [
     "La API original está escrita en C, y permite manejar la memoria directamente leyendo cada uno de los mensajes del fichero grib:"
@@ -445,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e305768",
+   "id": "bdabc771",
    "metadata": {},
    "source": [
     "![flujo basico C](flujo_basico_C.png)"
@@ -453,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de21898c",
+   "id": "cf597c8c",
    "metadata": {},
    "source": [
     "La interfaz de python nos oculta la mayor parte de la gestión de memoria (pero cuidado con codes_release!), evitándonos este trabajo extra:"
@@ -461,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f9b4093",
+   "id": "3dd9712a",
    "metadata": {},
    "source": [
     "![flujo_basico_python](flujo_basico_python.png)"
@@ -469,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e29177c",
+   "id": "8699bd2c",
    "metadata": {},
    "source": [
     "Algo un poco más complicado:"
@@ -478,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f46815fb",
+   "id": "2cf85d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +505,7 @@
     "    values = {}\n",
     "    \n",
     "    while True:\n",
-    "        gid = ec.codes_new_from_file(f, CODES_PRODUCT_GRIB)\n",
+    "        gid = ec.codes_new_from_file(f, ec.CODES_PRODUCT_GRIB)\n",
     "        if gid is None: break\n",
     "        \n",
     "        paramid = ec.codes_get(gid, \"paramId\")\n",
@@ -506,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0885a870",
+   "id": "df3c09ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,39 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e145ef7d",
-   "metadata": {},
-   "source": [
-    "### Módulo metview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e22a2311",
-   "metadata": {},
-   "source": [
-    "https://www.ecmwf.int/en/newsletter/169/computing/advanced-regridding-metview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44d74e67",
-   "metadata": {},
-   "source": [
-    "https://metview.readthedocs.io/en/latest/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89e57f38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30ac1057",
+   "id": "635617c3",
    "metadata": {},
    "source": [
     "### Módulo xarray"
@@ -556,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce89919",
+   "id": "4246792a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af9fed23",
+   "id": "5fbe025d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d84c9e",
+   "id": "77cb8e9b",
    "metadata": {},
    "source": [
     "Notar que xarray (con cfgrib) solo puede leer correctamente [gribs homogéneos](https://github.com/ecmwf/cfgrib/blob/master/README.rst)"
@@ -587,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a20322",
+   "id": "ee46954e",
    "metadata": {},
    "source": [
     "Seleccionamos el campo de la temperatura a 2m, para el alcance h+12:"
@@ -596,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fcf7f26",
+   "id": "6bd46b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd0944e",
+   "id": "4a80e985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,16 +600,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7865d88",
+   "id": "53231040",
    "metadata": {},
    "source": [
-    "O, si usamos cartopy para mostrar el mapa en proyección Mercator, por ejemplo, e incluímos la línea de costa:"
+    "O, si usamos cartopy para mostrar el mapa en proyección Mercator, por ejemplo, e incluimos la línea de costa:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc819d7",
+   "id": "753ed95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,26 +623,119 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fdcc501",
+   "id": "b17ad853",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f1773a9c",
+   "id": "8694f333",
+   "metadata": {},
+   "source": [
+    "### Módulo metview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "845123f9",
+   "metadata": {},
+   "source": [
+    "[Metview](https://confluence.ecmwf.int/display/METV/Metview) ([documentación aquí](https://metview.readthedocs.io/en/latest/)) es una aplicación desarrollada por el ECMWF que proporciona un entorno completo de trabajo para meteorólogos. Da herramientas para el acceso, procesamiento y visualización de datos meteorológicos (ver la [galería](https://confluence.ecmwf.int/display/METV/Gallery))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0a92bb",
+   "metadata": {},
+   "source": [
+    "Nosotros la utilizaremos aquí solamente para ilustrar el [recorte e interpolación de campos](https://www.ecmwf.int/en/newsletter/169/computing/advanced-regridding-metview)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d3c015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import metview as mv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "365a7435",
    "metadata": {},
    "source": [
     "### Módulo climetlab"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4222137d",
+   "metadata": {},
+   "source": [
+    "[Climetlab](https://climetlab.readthedocs.io/en/latest/) es un paquete de Python cuyo objetivo es simplificar el acceso a datos meteorológicos y climáticos, para que los usuarios puedan dedicarse al estudio de los datos y no a resolver problemas técnicos como el acceso y formato de los datos. Está todavía en desarrollo (de hecho puede que sea sustituido por otro paquete llamado earthkit)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5aca69c1",
+   "id": "00bf8a29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import climetlab as cml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02534530",
+   "metadata": {},
+   "source": [
+    "Un ejemplo utilizando datos libres:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8773232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = cml.load_source(\"ecmwf-open-data\", param=[\"2t\", \"msl\"],)\n",
+    "for s in source:\n",
+    "    cml.plot_map(s, title=True)\n",
+    "source.to_xarray()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b53980",
+   "metadata": {},
+   "source": [
+    "Este código sólo funcionará si se dispone de una API key para acceder al Climate Data Store:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3584bdb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = cml.load_source(\n",
+    "    \"cds\",\n",
+    "    \"reanalysis-era5-single-levels\",\n",
+    "    variable=[\"2t\", \"msl\"],\n",
+    "    product_type=\"reanalysis\",\n",
+    "    area=[50, -50, 20, 50],\n",
+    "    date=\"2011-12-02\", # [\"2011-12-02\", \"2011-12-03\"] for several dates\n",
+    "    time=\"12:00\",\n",
+    ")\n",
+    "for s in source:\n",
+    "    cml.plot_map(s)"
+   ]
   }
  ],
  "metadata": {
